# Trippy

./: .env.example  .gitignore  .hermes.md  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  ONBOARDING.md  README.md  SOUL.md  alembic.ini  mcp_config.json  pyproject.toml  sitecustomize.py  trippy-local-backup.patch
.github/workflows/: ci.yml
docs/: ADR.md  NEXT_PHASE_ARCHITECTURE.md  PHASES.md  TRIPPY_CANVAS_BACKEND_MAPPING.md  hermes-native-architecture.md  hermes-profile-trippy.md  telegram.md  trip-calendar-architecture.md  trippy-printing-press-migration-plan.md  trippy-tool-architecture.md
docs/integration/: backend_route_inventory.md  frontend_data_inventory.md  frontend_file_inventory.md
docs/qa/: json_first_destination_agnostic_audit.md
hermes-skills/trippy-flight-selection-workflow/: SKILL.md
hermes-skills/trippy-friction-auditor/: SKILL.md
hermes-skills/trippy-gmail-confirmation-reconciler/: SKILL.md
hermes-skills/trippy-lodging-structure-planner/: SKILL.md
hermes-skills/trippy-trip-date-guardian/: SKILL.md
hermes_trip/: __init__.py  cli.py  config.py
hermes_trip/db/: __init__.py
hermes_trip/importers/: drive_importer.py  sheet_importer.py
hermes_trip/ingest/: gmail_watcher.py  google_auth.py  linker.py  parser.py
scripts/: firecrawl_travel_probe.py  import_trippy_canvas_ui.sh  scouty_describe.py  trippy_tool_gateway.py
tests/: conftest.py
tests/fixtures/: create_sample_sheets.py  seed.json
tests/integration/: test_import.py  test_ingest.py  test_sheet_sync_roundtrip.py  test_thin_slice.py
tests/unit/: test_agent.py  test_agent_shim_gateway_boundary.py  test_calendar_binding.py  test_canonical_models.py  test_confirmation_parser.py  test_country_priors.py  test_dashboard.py  test_drive_importer.py  test_external_travel_tools_service.py  test_firecrawl.py  test_flight_flow.py  test_flight_trip_envelope.py  test_friction_detector.py  test_generalized_trip_planning.py  test_geography_resolver.py  test_google_auth.py  test_hermes_orchestration.py  test_learning_store.py  test_map_outputs.py  test_memory_store.py  test_models.py  test_openclaw_adapter.py  test_package_entrypoints.py  test_past_trip_miner.py  test_phase_planner.py  test_planning_advisor.py  test_retrospective.py  test_review_gated_learning_paths.py  test_serpapi_activity_options.py  test_setup.py  test_sheet_importer.py  test_shortlist_store_calendar_binding.py  test_skill_learning.py  test_source_registry.py  test_source_research_flights.py  test_telegram_bot.py  test_tool_registry_gateway.py  test_travel_intelligence.py  test_trip_boundary_optimizer.py  test_trip_calendar.py  (+4 more)
trippy/: __init__.py  agent.py  agent_shim.py  cli.py  config.py  thin_slice.py
trippy/data/: __init__.py  airport_alias_catalog.json
trippy/db/: __init__.py  models.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  (+1 more)
(+181 files in other folders)
