[project]
name = "hermes-trip"
version = "0.1.0"
description = "Hermes Trip Agent — personal travel-planning AI for the Chapman family"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
    "pypdf>=4.0",
    "rapidfuzz>=3.0",
    "python-dateutil>=2.9",
]

[project.scripts]
hermes-trip = "hermes_trip.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "types-python-dateutil",
    "sqlalchemy[mypy]>=2.0",
    "types-openpyxl>=3.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["hermes_trip/db/migrations/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
