[project]
name = "trippy"
version = "0.2.0"
description = "Trippy — Hermes-native travel concierge for the Chapman family"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
    "pypdf>=4.0",
    "rapidfuzz>=3.0",
    "python-dateutil>=2.9",
    "mcp>=1.0",
]

[project.scripts]
trippy = "trippy.cli:app"
trippy-telegram = "trippy.integrations.telegram_bot:run_telegram_bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "types-python-dateutil",
    "sqlalchemy[mypy]>=2.0",
    "types-openpyxl>=3.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"trippy/mcp/trippy_tools.py" = ["SIM108"]
"trippy/services/flight_shortlist.py" = ["F821", "I001"]
"trippy/services/flight_trip_envelope.py" = ["I001"]
"trippy/services/trip_calendar.py" = ["B905"]
"trippy/ui/server.py" = ["I001"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["trippy/db/migrations/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
